--- a/templates/katzen/purchase/create_purchase.html.twig
+++ b/templates/katzen/purchase/create_purchase.html.twig
@@ -1,4 +1,4 @@
-{% extends activeDash ?? 'katzen/dash-admin.html.twig' %}
+{% extends activeDash ?? 'katzen/_dashboard-base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/purchase/_create_purchase.html.twig' %}
 {% endblock %}
