--- a/templates/katzen/receipt/show_receipt.html.twig
+++ b/templates/katzen/receipt/show_receipt.html.twig
@@ -1,4 +1,4 @@
-{% extends activeDash ?? 'katzen/dash-admin.html.twig' %}
+{% extends activeDash ?? 'katzen/_dashboard-base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/receipt/_show_receipt.html.twig' %}
 {% endblock %}
