Masonry component for client site

--- a/templates/client/base.html.twig
+++ b/templates/client/base.html.twig
@@ -7,8 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {{ encore_entry_link_tags('app') }}
-    <link href="profile.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="{{ asset('profile.css') }}">
+    <link href="client.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ asset('client.css') }}">
+    <link href="masonry.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ asset('masonry.css') }}">    
     {% endblock %}
 </head>
 <body>
@@ -47,7 +49,7 @@
             <p></p>
             <aside>
               {% block footer_text %}
-              This page intentionally left blank.
+              Alexandra (Sasha) Beal © 2026
               {% endblock %}
             </aside>
           </div>
