--- a/templates/client/home.html.twig
+++ b/templates/client/home.html.twig
@@ -14,7 +14,13 @@
     </div>
     <div>
       <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
-    </div>    
+    </div>
+    <div>
+      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+    </div>
+    <div>
+      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+    </div>        
   </div>
 </article>
 {% endblock %}
