--- a/templates/client/base.html.twig
+++ b/templates/client/base.html.twig
@@ -24,11 +24,13 @@
           <div class='col-md-1'>
           </div>
           <div class='col-md-1'>
-          </div>
-          <div class='col-md-1'>
-          </div>
-          <div class='col-md-1'>
             <a href="{{ path('client_landing') }}">Home</a>
+          </div>
+          <div class='col-md-1'>
+            <a href="{{ path('client_work') }}">Work</a>
+          </div>
+          <div class='col-md-1'>
+            <a href="{{ path('client_landing') }}">Services</a>
           </div>
           <div class='col-md-2'>            
             <a href="{{ path('client_contact') }}" class='btn btn-primary'>Contact</a>
