Beal client site updates

--- a/templates/client/home.html.twig
+++ b/templates/client/home.html.twig
@@ -4,22 +4,22 @@
 <article class="sections" id="sections">
   <div class="grid masonry">
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-1.jpg') }}">
     </div>
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-2.jpg') }}">
     </div>
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-3.jpg') }}"> 
     </div>
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-1.jpg') }}">
     </div>
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-2.jpg') }}">
     </div>
     <div>
-      <img src="https://images.squarespace-cdn.com/content/v1/5cdc8db64d546e01b837cea4/1562710262349-VSOYX8VZYQQF5JF5HOV9/65.jpg" />
+      <img src="{{ asset('assets/client/beal-3.jpg') }}">
     </div>        
   </div>
 </article>
