--- a/templates/client/base.html.twig
+++ b/templates/client/base.html.twig
@@ -30,7 +30,7 @@
             <a href="{{ path('client_work') }}">Work</a>
           </div>
           <div class='col-md-1'>
-            <a href="{{ path('client_landing') }}">Services</a>
+            <a href="{{ path('client_services') }}">Services</a>
           </div>
           <div class='col-md-2'>            
             <a href="{{ path('client_contact') }}" class='btn btn-primary'>Contact</a>
