--- a/templates/katzen/recipe/create_recipe_flow.html.twig
+++ b/templates/katzen/recipe/create_recipe_flow.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/base.html.twig' %}
+{% extends 'katzen/_dashboard_base.html.twig' %}
 
 {% block title %}Katzen Recipe Builder{% endblock %}
 
@@ -8,8 +8,11 @@ document.addEventListener('DOMContentLoaded', () => {
     const container = document.querySelector('[data-prototype]');
     let index = container.children.length;
 
-    const addButton = document.getElementById('add-ingredient');
-    addButton.addEventListener('click', () => {
+  const addIngrButton = document.getElementById('add-ingredient');
+  console.log('Added a button?')
+  if (addIngrButton) {
+    addIngrButton.addEventListener('click', () => {
+        console.log('Fuck ye');  
         const prototype = container.dataset.prototype;
         const newForm = document.createElement('div');
         newForm.classList.add('ingredient-form');
@@ -33,6 +36,39 @@ document.addEventListener('DOMContentLoaded', () => {
             e.target.closest('.ingredient-form').remove();
         });
     });
+  }
+
+  const addInstButton = document.getElementById('add-instruction');
+  console.log('Added the bloody button');
+
+  if (addInstButton) {
+    console.log('Yes ye blimey cunt')
+    addInstButton.addEventListener('click', () => {
+        console.log('A classy fuck');
+        const prototype = container.dataset.prototype;
+        const newForm = document.createElement('div');
+        newForm.classList.add('instruction-form');
+        newForm.innerHTML = prototype.replace(/__name__/g, index);
+        index++;
+
+        const removeBtn = document.createElement('button');
+        removeBtn.type = 'button';
+        removeBtn.textContent = 'Remove';
+        removeBtn.classList.add('remove-instruction');
+        removeBtn.addEventListener('click', () => {
+            newForm.remove();
+        });
+
+        newForm.appendChild(removeBtn);
+        container.appendChild(newForm);
+    });
+
+    document.querySelectorAll('.remove-instruction').forEach(btn => {
+        btn.addEventListener('click', e => {
+            e.target.closest('.instruction-form').remove();
+        });
+    });
+  }
 });
 </script>
 
@@ -92,16 +128,13 @@ document.addEventListener('DOMContentLoaded', () => {
                     <div data-prototype="{{ form_widget(form.recipeInstructions.vars.prototype)|e('html_attr') }}">
                       {% for instructionForm in form.recipeInstructions %}
                       <div class="instruction-form">
-                        {{ form_row(instructionForm.supply) }}
-                        {{ form_row(instructionForm.quantity) }}
-                        {{ form_row(instructionForm.unit) }}
-                        {{ form_row(instructionForm.note) }}
+                        {{ form_row(instructionForm.description) }}
                         <button type="button" class="remove-instruction">Remove</button>
                       </div>
                       {% endfor %}
                     </div>
 
-                    <button type="button" id="add-instruction">Add Instruction</button>
+                    <button type="button" id="add-instruction">Add Instruction :)</button>
                   </div>
                   
 		</div>                  
