--- a/templates/katzen/recipe/import.html.twig
+++ b/templates/katzen/recipe/import.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/base.html.twig' %}
+{% extends 'katzen/_dashboard_base.html.twig' %}
 
 {% block main_content %}
 <div class="container mt-4">
@@ -11,6 +11,6 @@
         {{ form_row(form.submit) }}
     {{ form_end(form) }}
 
-    <a href="{{ path('dashboard_home') }}" class="btn btn-secondary mt-3">Back to Dashboard</a>
+    <a href="{{ path('prep_dashboard') }}" class="btn btn-secondary mt-3">Back to Dashboard</a>
 </div>
 {% endblock %}
